--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,12 @@ spring.jpa.hibernate.ddl-auto=update
 #for seeing sql queries in background
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+#JMS
+#spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=krutikabhadane588@gmail.com
+#spring.mail.password=asjsnpxukbfqyrxz
+#spring.mail.properties.mail.smtp.auths=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
