[Siddharth] ADD: Added JMS functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=addressbook
 #database config
-spring.datasource.url=jdbc:mysql://localhost:3306/address_book
+spring.datasource.url=${DB_URL}
 spring.datasource.username=root
-spring.datasource.password=xyzABC@128
+spring.datasource.password=${DB_PASS}
 spring.jpa.hibernate.ddl-auto=update
 
 #for seeing sql queries in background
@@ -10,10 +10,9 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 #JMS
-#spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
-#spring.mail.host=smtp.gmail.com
-#spring.mail.port=587
-#spring.mail.username=krutikabhadane588@gmail.com
-#spring.mail.password=asjsnpxukbfqyrxz
-#spring.mail.properties.mail.smtp.auths=true
-#spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${MAIL_ID}
+spring.mail.password=${MAIL_PASS}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
